--- a/client/pom.xml
+++ b/client/pom.xml
@@ -39,6 +39,7 @@
 				<version>${maven-android-plugin-version}</version>
 				<configuration>
 					<sdk>
+					    <path>${sdk.path}</path>
 						<platform>${android-platform}</platform>
 					</sdk>
 					<emulator>
@@ -72,6 +73,12 @@
 			<version>${android-version}</version>
 			<scope>provided</scope>
 		</dependency>
+<dependency>
+	<groupId>com.google.android</groupId>
+	<artifactId>support-v4</artifactId>
+	<version>r7</version>
+</dependency>
+            
  		<dependency>
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-rest-template</artifactId>
