--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -20,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".auth.DaM0vm3ntAuthenticatorActivity"></activity>
     </application>
 
 </manifest>
