--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,7 +16,7 @@
 	<properties> 
 		<android-platform>15</android-platform>
 		<android-emulator>GN</android-emulator>
-		<maven-android-plugin-version>2.8.4</maven-android-plugin-version>
+		<maven-android-plugin-version>3.3.2</maven-android-plugin-version>
 		<maven-compiler-plugin-version>2.3.2</maven-compiler-plugin-version>
 		<maven-eclipse-plugin-version>2.8</maven-eclipse-plugin-version>
 		<android-version>4.0.1.2</android-version>
@@ -35,7 +35,7 @@
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>maven-android-plugin</artifactId>
+				<artifactId>android-maven-plugin</artifactId>
 				<version>${maven-android-plugin-version}</version>
 				<configuration>
 					<sdk>
@@ -64,6 +64,16 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+					<artifactId>android-maven-plugin</artifactId>
+					<version>${maven-android-plugin-version}</version>
+					<extensions>true</extensions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<dependencies>
